    • Stored in runs/job_<id>/<host>/buffer_pool.json
    • Appears on host detail page before tabs

32. HOT TABLES (OPTIONAL)
    • New optional "Collect Hot Tables" toggle on homepage
    • Queries performance_schema.table_io_waits_summary_by_index_usage
    • Shows top 10 most active tables by I/O operations
    • Metrics: Schema, Table, Reads, Writes, Total Ops
    • Stored in runs/job_<id>/<host>/hot_tables.json
    • Graceful handling when performance_schema is disabled
    • OFF by default (no extra queries unless enabled)
    • Card displays below Buffer Pool summary

33. HUMAN-READABLE NUMBERS IN HOT TABLES
    • Numbers in Hot Tables now display with K/M/B suffixes
    • Tooltips show exact values on hover
    • Uses instant tooltips (no delay)

34. CLIENT-SIDE TAB SWITCHING (NO PAGE REFRESH)
    • Tabs on host detail page now switch instantly without page refresh
    • Uses Alpine.js x-show for client-side tab visibility
    • All tab data loaded upfront for instant switching
    • Charts in Global Status tab initialize when tab becomes visible
    • Dramatically improved UX - no more page flickering or scroll position changes
    • Only host switching (via dropdown) requires server round-trip

35. HOT TABLES SORTING
    • Added sortable columns to Hot Tables section
    • Click column headers to sort ascending/descending
    • Sort indicator arrow shows current sort column and direction
    • Default sort: Total Ops (descending)

36. SERVER UPTIME DISPLAY
    • Added server uptime to main header (next to collection timestamp)
    • Shows human-readable format (e.g., "7d 12h", "3h 45m")
    • Tooltip shows exact seconds on hover
    • Uptime sourced from SHOW GLOBAL STATUS (Uptime variable)

37. HOT TABLES OPS/SEC COLUMN
    • New "Ops/sec" column showing average operations per second
    • Calculated from total_ops / server_uptime
    • Sortable like other columns
    • Provides normalized throughput metric for comparing tables
